samples/sample_target_outputs/out8.txt

Farthest parse stack:
  ['phrase', 'statement', 'no_newline_statement', 'for_loop', 'statement', '[ \t]*\n']
Farthest token mismatch:
  Token '[ \t]*\n' vs Code '; i < 100; i += 1) s'
Error point:
* for (i = 0; i < 100; i += 1) s += i
  ^         ^
  |         |
  | parse failed here
  |
  parse began here

Traceback (most recent call last):
  File "/usr/local/bin/water", line 65, in <module>
    parse.runfile(sys.argv[1])
  File "/Users/tylerneylon/Dropbox/Documents/code/water/parse.py", line 355, in runfile
    for tree in iterate(filename):
  File "/Users/tylerneylon/Dropbox/Documents/code/water/parse.py", line 351, in iterate
    raise ParseError(error_fmt % (line_num, char_offset))
parse.ParseError: Parsing failed on line 48, character 11
